--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/navbar :: head"></head>
+<head th:replace="partials/navbar :: head ('Home Page')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 <h1>Hello World! This is JD Firearms!</h1>
