--- a/src/main/resources/templates/gunsmithing.html
+++ b/src/main/resources/templates/gunsmithing.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/navbar :: head ('Gunsmithing')"></head>
 <body>
-
+<h1>Gunsmithing Page</h1>
 </body>
 </html>
