--- a/src/main/resources/templates/gunsmithing.html
+++ b/src/main/resources/templates/gunsmithing.html
@@ -2,6 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="partials/navbar :: head ('Gunsmithing')"></head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
+
 <h1>Gunsmithing Page</h1>
+
+<div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
