--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -20,7 +20,7 @@
                 <a class="nav-link" th:href="@{/gunsmithing}">Gunsmithing</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">About Us</a>
             </li>
         </ul>
         <span class="navbar-text">
