--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/navbar :: head ('About Us')"></head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
+<h1>About Us</h1>
 
+<div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
