--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/navbar :: head ('About Us')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-<h1>About Us</h1>
+<h1>About Us Page</h1>
 
 <div th:replace="partials/navbar :: scripts"></div>
 </body>
