--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,31 @@
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 <h1>Hello World! This is JD Firearms!</h1>
+<div class="container">
+    <div class="carousel-wrap">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img th:src="@{${'/img/IMG_2260.jpeg'}}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img th:src="@{${'/img/IMG_2268.jpeg'}}" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</div>
 
 <div th:replace="partials/navbar :: scripts"></div>
 </body>
