--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/navbar :: head ('Home Page')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-<h1>Hello World! This is JD Firearms!</h1>
+<h1>Home Page</h1>
 <div class="container">
     <div class="carousel-wrap">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
