--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/fonts.css}">
+<!--    <link rel="stylesheet" th:href="@{/css/fonts.css}">-->
     <link rel="stylesheet" th:href="@{/css/sizing.css}">
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/gunsmithing}">Gunsmithing</a>
+                <a class="nav-link" th:href="@{/gunsmithing}">Gunsmith Services</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/about-us}">About Us</a>
@@ -31,10 +31,11 @@
     </div>
 </nav>
 
-<footer>
+<footer th:fragment="footer">
     <h3>Support</h3>
     <div class="contact">
         <div id="phone-num">(361)463-1986</div>
+        <div>davenport.jared@gmail.com</div>
     </div>
 </footer>
 <div th:fragment="scripts">
