--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -3,8 +3,9 @@
 <head th:replace="partials/navbar :: head ('About Us')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-<h1>About Us Page</h1>
+<h1>About Us</h1>
 
+<footer th:replace="partials/navbar :: footer"></footer>
 <div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
