--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100%;
+    position: relative;
+}
+
 img {
     width: 300px;
     height: 400px;
@@ -9,4 +15,19 @@ img {
 
 p {
     margin-bottom: 0;
+}
+
+.page-container {
+    min-height: 100vh; /* will cover the 100% of viewport */
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px;
+}
+
+footer {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
 }
