--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,30 +4,33 @@
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 <h1>Home</h1>
-<div class="container">
-    <div class="carousel-wrap">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">
+<div class="page-container">
+    <div class="container">
+        <div class="carousel-wrap">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img th:src="@{${'/img/IMG_2260.jpeg'}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img th:src="@{${'/img/IMG_2268.jpeg'}}" class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img th:src="@{${'/img/IMG_2260.jpeg'}}" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img th:src="@{${'/img/IMG_2268.jpeg'}}" class="d-block w-100" alt="...">
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </div>
+    <footer th:replace="partials/navbar :: footer"></footer>
 </div>
 
 <div th:replace="partials/navbar :: scripts"></div>
