--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -31,7 +31,7 @@
     </div>
 </nav>
 
-<footer th:fragment="footer">
+<footer th:fragment="footer" class="text-light bg-dark">
     <h3>Support</h3>
     <div class="contact">
         <div id="phone-num">(361)463-1986</div>
