--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -37,6 +37,11 @@
         <div id="phone-num">(361)463-1986</div>
         <div>davenport.jared@gmail.com</div>
     </div>
+    <div id="social-media">
+        <div>Facebook</div>
+        <div>Instagram</div>
+        <div>Twitter</div>
+    </div>
 </footer>
 <div th:fragment="scripts">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
