--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -18,16 +18,19 @@ p {
 }
 
 .page-container {
-    min-height: 100vh; /* will cover the 100% of viewport */
-    overflow: hidden;
-    display: block;
-    position: relative;
-    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 90vh; /* will cover the 100% of viewport */
+    /*overflow: hidden;*/
+    /*display: block;*/
+    /*position: relative;*/
+    /*padding-bottom: 100px;*/
 }
 
 footer {
     width: 100%;
     height: auto;
-    position: absolute;
-    bottom: 0;
+    /*position: absolute;*/
+    /*bottom: -20px;*/
 }
