--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -4,8 +4,12 @@
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 <h1>About Us</h1>
+<div class="page-container">
+    <div class="container">
 
-<footer th:replace="partials/navbar :: footer"></footer>
+    </div>
+    <footer th:replace="partials/navbar :: footer"></footer>
+</div>
 <div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
