--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -17,6 +17,14 @@ p {
     margin-bottom: 0;
 }
 
+.page-title {
+    width: 75%;
+    text-align: center;
+    margin: auto auto 25px auto;
+    padding: 25px;
+    border-bottom: 1px solid rgb(138 138 138);
+}
+
 .page-container {
     display: flex;
     flex-direction: column;
