--- a/src/main/resources/templates/gunsmith-services.html
+++ b/src/main/resources/templates/gunsmith-services.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 
-<h1>Gunsmith Services</h1>
+<h1 class="page-title">Gunsmith Services</h1>
 <div class="page-container">
     <div class="container">
         <div>
