--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/sizing.css}">
 </head>
 <body>
-<nav th:fragment="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<nav th:fragment="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mb-3">
     <a class="navbar-brand" href="#">JD Firearms</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
