--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/navbar :: head ('About Us')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-<h1>About Us</h1>
+<h1 class="page-title">About Us</h1>
 <div class="page-container">
     <div class="container">
 
