--- a/src/main/resources/templates/gunsmith-services/ar15.html
+++ b/src/main/resources/templates/gunsmith-services/ar15.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/navbar :: head ('AR-15')"></head>
 <body>
-
+<h1 class="page-title">AR-15 Services</h1>
+<div class="page-container">
+    <div class="container">
+        <div>
+            <div>
+                <h3>AR-15 Services</h3>
+            </div>
+            <div>
+                <p>Gas block removal and install lo pro gas block - $30</p>
+                <p>Handguard install - $50</p>
+                <p>Time muzzle brake or compensator (If mounting a suppressor mount will check and verify that its
+                    concentric - $10-$20</p>
+                <p>Build Complete Upper - $45 (Not Including Parts)</p>
+                <p>Build Complete Lower - $45 (Not Including Parts)</p>
+                <p>Build Complete Rifle - $80 (Not Including Parts)</p>
+                <p>Install QD Sling Endplates - $20</p>
+                <p>Install Trigger $20</p>
+                <p>Rifle to Carbine stock conversion /Vice Versa - $20</p>
+            </div>
+        </div>
+    </div>
+    <footer th:replace="partials/navbar :: footer"></footer>
+</div>
+<div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
