--- a/src/main/resources/templates/gunsmith-services/ak47.html
+++ b/src/main/resources/templates/gunsmith-services/ak47.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/navbar :: head ('AK-47')"></head>
 <body>
-
+<h1 class="page-title">AK-47 Services</h1>
+<div class="page-container">
+    <div class="container">
+        <div>
+            <div>
+                <h3>AK Services</h3>
+            </div>
+            <div>
+                <p>SAIGA RIFLE CONVERSION SERVICE STARTING @ 125.00 + PARTS</p>
+                <p>Install butt stock, pistol grip, bullet guide, modify magazine release, & install control group.</p>
+                <p>SAIGA 12 SHOTGUN CONVERSION SERVICE STARTING @ 100.00 + PARTS</p>
+                <p>Install butt stock, pistol grip, & install control group.</p>
+                <p>Hand threading for muzzle brake: $60</p>
+                <p>Lathe threading for suppressor use : $225 (requires removal of the barrel and reinstall of
+                    barrel)</p>
+                <p>AK tuning service (Smoothing out action and polishing internals): $80</p>
+            </div>
+        </div>
+    </div>
+    <footer th:replace="partials/navbar :: footer"></footer>
+</div>
+<div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
