--- a/src/main/resources/templates/gunsmith-services/ar15.html
+++ b/src/main/resources/templates/gunsmith-services/ar15.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="partials/navbar :: head ('AR-15')"></head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
 <h1 class="page-title">AR-15 Services</h1>
 <div class="page-container">
     <div class="container">
