added directory to links

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -26,13 +26,13 @@
                     Gunsmith Services
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Precision Rifle Services</a>
+                    <a class="dropdown-item" th:href="@{/precision}">Precision Rifle Services</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">AR-15</a>
+                    <a class="dropdown-item" th:href="@{/ar15}">AR-15</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">AK-47</a>
+                    <a class="dropdown-item" th:href="@{/ak47}">AK-47</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Miscellaneous</a>
+                    <a class="dropdown-item" th:href="@{/misc}">Miscellaneous</a>
                 </div>
             </li>
             <li class="nav-item">
