changed title, commented out some code

--- a/src/main/resources/templates/gunsmith-services/precision.html
+++ b/src/main/resources/templates/gunsmith-services/precision.html
@@ -4,13 +4,13 @@
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 
-<h1 class="page-title">Gunsmith Services</h1>
+<h1 class="page-title">Precision Rifle Services</h1>
 <div class="page-container">
     <div class="container">
         <div>
-            <div>
-                <h3>Precision Rifle Services</h3>
-            </div>
+<!--            <div>-->
+<!--                <h3>Precision Rifle Services</h3>-->
+<!--            </div>-->
             <div>
                 <p>Install trigger, DBM, Scope Rail, Scope, Boresight $25 ea</p>
                 <p>Range Sight $75 plus ammo /work up load, break in new barrel $325</p>
