commented out code

--- a/src/main/resources/templates/gunsmith-services/ak47.html
+++ b/src/main/resources/templates/gunsmith-services/ak47.html
@@ -7,9 +7,9 @@
 <div class="page-container">
     <div class="container">
         <div>
-            <div>
-                <h3>AK Services</h3>
-            </div>
+<!--            <div>-->
+<!--                <h3>AK Services</h3>-->
+<!--            </div>-->
             <div>
                 <p>SAIGA RIFLE CONVERSION SERVICE STARTING @ 125.00 + PARTS</p>
                 <p>Install butt stock, pistol grip, bullet guide, modify magazine release, & install control group.</p>
