--- a/src/main/resources/templates/gunsmith-services/ar15.html
+++ b/src/main/resources/templates/gunsmith-services/ar15.html
@@ -7,9 +7,9 @@
 <div class="page-container">
     <div class="container">
         <div>
-            <div>
-                <h3>AR-15 Services</h3>
-            </div>
+<!--            <div>-->
+<!--                <h3>AR-15 Services</h3>-->
+<!--            </div>-->
             <div>
                 <p>Gas block removal and install lo pro gas block - $30</p>
                 <p>Handguard install - $50</p>
