--- a/src/main/resources/templates/gunsmith-services/misc.html
+++ b/src/main/resources/templates/gunsmith-services/misc.html
@@ -6,9 +6,9 @@
 <h1 class="page-title">Miscellaneous</h1>
 <div class="page-container">
     <div class="container">
-        <div>
-            <h3>Miscellaneous Services</h3>
-        </div>
+<!--        <div>-->
+<!--            <h3>Miscellaneous Services</h3>-->
+<!--        </div>-->
         <div>
             <p>Service charge Per Hour: $60</p>
             <p>Minimum Charge per gun: $25</p>
