--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <!--    <link rel="stylesheet" th:href="@{/css/fonts.css}">-->
     <link rel="stylesheet" th:href="@{/css/sizing.css}">
+    <script src="https://kit.fontawesome.com/f8d7ac0a9e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav th:fragment="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mb-3">
@@ -56,7 +57,7 @@
         <div>davenport.jared@gmail.com</div>
     </div>
     <div id="social-media">
-        <div>Facebook</div>
+        <div><i class="fab fa-facebook"></i></div>
         <div>Instagram</div>
         <div>Twitter</div>
     </div>
