added social media icons

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -57,9 +57,9 @@
         <div>davenport.jared@gmail.com</div>
     </div>
     <div id="social-media">
-        <div><i class="fab fa-facebook"></i></div>
-        <div>Instagram</div>
-        <div>Twitter</div>
+        <div><i class="fab fa-facebook icon"></i></div>
+        <div><i class="fab fa-instagram icon"></i></div>
+        <div><i class="fab fa-twitter icon"></i></div>
     </div>
 </footer>
 <div th:fragment="scripts">
