added icon class and support-header class

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -51,10 +51,10 @@
 </nav>
 
 <footer th:fragment="footer" class="text-light bg-dark">
-    <h3>Support</h3>
+    <h3 id="support-header">Support</h3>
     <div class="contact">
-        <div id="phone-num">(361)463-1986</div>
-        <div>davenport.jared@gmail.com</div>
+        <div id="phone-num" class="margin-bottom">(361)463-1986</div>
+        <div class="margin-bottom">davenport.jared@gmail.com</div>
     </div>
     <div id="social-media">
         <div><i class="fab fa-facebook icon"></i></div>
