--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -8,9 +8,15 @@ body {
     position: relative;
 }
 
+#home-img {
+    max-width: 400px;
+    max-height: 400px;
+    /*margin: 0 auto 0 auto;*/
+}
+
 img {
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
 }
 
 p {
@@ -18,9 +24,15 @@ p {
 }
 
 .carousel-wrap {
-    max-width: 500px;
-    max-height: 500px;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*max-width: 500px;*/
+    /*max-height: 500px;*/
 }
+
+/*#welcome-body {*/
+/*    width: 100%;*/
+/*}*/
 
 .page-title {
     width: 75%;
