--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,28 +6,35 @@
 <h1 class="page-title">Home</h1>
 <div class="page-container">
     <div class="container">
-        <div class="carousel-wrap">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img th:src="@{${'/img/IMG_2260.jpeg'}}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img th:src="@{${'/img/IMG_2268.jpeg'}}" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+        <div class="carousel-wrap row justify-content-center">
+            <div id="home-img" class="col-lg-6">
+                <img th:src="@{${'/img/IMG_2263.jpeg'}}" alt="">
             </div>
+            <div id="welcome-body" class="col-lg-6">
+                <h3>Welcome to JD Firearms</h3>
+                <p>Yeah okay. Hey, not too early I sleep in on Saturday. Oh, McFly, your shoe's untied. Don't be so gullible, McFly. You got the place fixed up nice, McFly. I have you're car towed all the way to your house and all you've got for me is light beer. What are you looking at, butthead. Say hi to your mom for me. Right. He's a very strange young man. Damn, where is that kid. Damn. Damn damn. You're late, do you have no concept of time?</p>
+            </div>
+<!--            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">-->
+<!--                <div class="carousel-inner">-->
+<!--                    <div class="carousel-item active">-->
+<!--                        <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">-->
+<!--                    </div>-->
+<!--                    <div class="carousel-item">-->
+<!--                        <img th:src="@{${'/img/IMG_2263.jpeg'}}" class="d-block w-100" alt="...">-->
+<!--                    </div>-->
+<!--                    <div class="carousel-item">-->
+<!--                        <img th:src="@{${'/img/IMG_2268.jpeg'}}" class="d-block w-100" alt="...">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">-->
+<!--                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--                    <span class="sr-only">Previous</span>-->
+<!--                </a>-->
+<!--                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">-->
+<!--                    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--                    <span class="sr-only">Next</span>-->
+<!--                </a>-->
+<!--            </div>-->
         </div>
     </div>
     <footer th:replace="partials/navbar :: footer"></footer>
