--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -15,8 +15,10 @@ body {
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    width: 700px;
+    height: 700px;
+    /*width: 100%;*/
+    /*height: auto;*/
 }
 
 p {
@@ -26,8 +28,10 @@ p {
 .carousel-wrap {
     /*display: flex;*/
     /*justify-content: space-between;*/
-    /*max-width: 500px;*/
-    /*max-height: 500px;*/
+    max-width: 700px;
+    max-height: 700px;
+    margin: auto;
+    padding: 15px;
 }
 
 /*#welcome-body {*/
@@ -56,7 +60,7 @@ p {
 footer {
     width: 100%;
     height: auto;
-    padding: 65px;
+    padding: 50px;
     /*position: absolute;*/
     /*bottom: -20px;*/
 }
@@ -69,6 +73,7 @@ footer {
 #support-header {
     border-bottom: 1px solid white;
     padding-bottom: 10px;
+    max-width: 500px;
 }
 
 #social-media {
