--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,13 +17,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100" alt="...">
+                        <img th:src="@{${'/img/IMG_1782.JPG'}}" class="d-block w-100 img-carousel" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img th:src="@{${'/img/IMG_2263.jpeg'}}" class="d-block w-100" alt="...">
+                        <img th:src="@{${'/img/IMG_2263.jpeg'}}" class="d-block w-100 img-carousel" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img th:src="@{${'/img/IMG_1942.jpeg'}}" class="d-block w-100" alt="...">
+                        <img th:src="@{${'/img/IMG_1942.jpeg'}}" class="d-block w-100 img-carousel" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
