added bootstrap card

--- a/src/main/resources/templates/gunsmith-services/ak47.html
+++ b/src/main/resources/templates/gunsmith-services/ak47.html
@@ -6,19 +6,34 @@
 <h1 class="page-title">AK-47 Services</h1>
 <div class="page-container">
     <div class="container">
-        <div>
+<!--        <div>-->
 <!--            <div>-->
-<!--                <h3>AK Services</h3>-->
+<!--                -->
 <!--            </div>-->
-            <div>
-                <p>SAIGA RIFLE CONVERSION SERVICE STARTING @ 125.00 + PARTS</p>
-                <p>Install butt stock, pistol grip, bullet guide, modify magazine release, & install control group.</p>
-                <p>SAIGA 12 SHOTGUN CONVERSION SERVICE STARTING @ 100.00 + PARTS</p>
-                <p>Install butt stock, pistol grip, & install control group.</p>
-                <p>Hand threading for muzzle brake: $60</p>
-                <p>Lathe threading for suppressor use : $225 (requires removal of the barrel and reinstall of
+<!--            <div>-->
+<!--                <p>SAIGA RIFLE CONVERSION SERVICE STARTING @ 125.00 + PARTS</p>-->
+<!--                <p>Install butt stock, pistol grip, bullet guide, modify magazine release, & install control group.</p>-->
+<!--                <p>SAIGA 12 SHOTGUN CONVERSION SERVICE STARTING @ 100.00 + PARTS</p>-->
+<!--                <p>Install butt stock, pistol grip, & install control group.</p>-->
+<!--                <p>Hand threading for muzzle brake: $60</p>-->
+<!--                <p>Lathe threading for suppressor use : $225 (requires removal of the barrel and reinstall of-->
+<!--                    barrel)</p>-->
+<!--                <p>AK tuning service (Smoothing out action and polishing internals): $80</p>-->
+<!--            </div>-->
+<!--        </div>-->
+        <div class="card mb-3">
+            <img th:src="@{${'/img/IMG_1886.jpeg'}}" class="card-img-top img-card" alt="...">
+            <div class="card-body">
+<!--                <h5 class="card-title">Card title</h5>-->
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">SAIGA RIFLE CONVERSION SERVICE STARTING @ 125.00 + PARTS</p>
+                <p class="card-text">Install butt stock, pistol grip, bullet guide, modify magazine release, & install control group.</p>
+                <p class="card-text">SAIGA 12 SHOTGUN CONVERSION SERVICE STARTING @ 100.00 + PARTS</p>
+                <p class="card-text">Install butt stock, pistol grip, & install control group.</p>
+                <p class="card-text">Hand threading for muzzle brake: $60</p>
+                <p class="card-text">Lathe threading for suppressor use : $225 (requires removal of the barrel and reinstall of
                     barrel)</p>
-                <p>AK tuning service (Smoothing out action and polishing internals): $80</p>
+                <p class="card-text">AK tuning service (Smoothing out action and polishing internals): $80</p>
             </div>
         </div>
     </div>
