added bootstrap card with image

--- a/src/main/resources/templates/gunsmith-services/ar15.html
+++ b/src/main/resources/templates/gunsmith-services/ar15.html
@@ -8,19 +8,32 @@
     <div class="container">
         <div>
 <!--            <div>-->
-<!--                <h3>AR-15 Services</h3>-->
+<!--                <p>Gas block removal and install lo pro gas block - $30</p>-->
+<!--                <p>Handguard install - $50</p>-->
+<!--                <p>Time muzzle brake or compensator (If mounting a suppressor mount will check and verify that its-->
+<!--                    concentric - $10-$20</p>-->
+<!--                <p>Build Complete Upper - $45 (Not Including Parts)</p>-->
+<!--                <p>Build Complete Lower - $45 (Not Including Parts)</p>-->
+<!--                <p>Build Complete Rifle - $80 (Not Including Parts)</p>-->
+<!--                <p>Install QD Sling Endplates - $20</p>-->
+<!--                <p>Install Trigger $20</p>-->
+<!--                <p>Rifle to Carbine stock conversion /Vice Versa - $20</p>-->
 <!--            </div>-->
-            <div>
-                <p>Gas block removal and install lo pro gas block - $30</p>
-                <p>Handguard install - $50</p>
-                <p>Time muzzle brake or compensator (If mounting a suppressor mount will check and verify that its
-                    concentric - $10-$20</p>
-                <p>Build Complete Upper - $45 (Not Including Parts)</p>
-                <p>Build Complete Lower - $45 (Not Including Parts)</p>
-                <p>Build Complete Rifle - $80 (Not Including Parts)</p>
-                <p>Install QD Sling Endplates - $20</p>
-                <p>Install Trigger $20</p>
-                <p>Rifle to Carbine stock conversion /Vice Versa - $20</p>
+            <div class="card mb-3">
+                <img th:src="@{${'/img/ar-15.jpg'}}" class="card-img-top img-card img-card" alt="...">
+                <div class="card-body">
+                    <!--                <h5 class="card-title">Card title</h5>-->
+                    <p class="card-text">Gas block removal and install lo pro gas block - $30</p>
+                    <p class="card-text">Handguard install - $50</p>
+                    <p class="card-text">Time muzzle brake or compensator (If mounting a suppressor mount will check and verify that its
+                        concentric - $10-$20</p>
+                    <p class="card-text">Build Complete Upper - $45 (Not Including Parts)</p>
+                    <p class="card-text">Build Complete Lower - $45 (Not Including Parts)</p>
+                    <p class="card-text">Build Complete Rifle - $80 (Not Including Parts)</p>
+                    <p class="card-text">Install QD Sling Endplates - $20</p>
+                    <p class="card-text">Install Trigger $20</p>
+                    <p class="card-text">Rifle to Carbine stock conversion /Vice Versa - $20</p>
+                </div>
             </div>
         </div>
     </div>
