added email icon and some styling

--- a/src/main/resources/static/css/sizing.css
+++ b/src/main/resources/static/css/sizing.css
@@ -93,3 +93,12 @@ footer {
 .img-card {
     max-height: 500px;
 }
+
+#contact-us {
+    display: flex;
+    align-items: center;
+}
+
+.larger-text {
+    font-size: 20px;
+}
