--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -49,9 +49,9 @@
 
 <footer th:fragment="footer" class="text-light bg-dark">
     <h3 id="support-header">Support</h3>
-    <div class="contact">
+    <div class="contact larger-text">
         <div id="phone-num" class="margin-bottom">(361)463-1986</div>
-        <div class="margin-bottom">davenport.jared@gmail.com</div>
+        <div id="contact-us" class="margin-bottom"><i class="far fa-envelope icon"></i><a th:href="@{/contact-us}">Contact Us</a></div>
     </div>
     <div id="social-media">
         <div><i class="fab fa-facebook icon"></i></div>
