--- a/src/main/resources/templates/contact-us.html
+++ b/src/main/resources/templates/contact-us.html
@@ -6,7 +6,25 @@
 <h1 class="page-title">Contact Us</h1>
 <div class="page-container">
     <div class="container">
-
+        <form th:action="@{/contact-us}" method="post">
+            <div class="form-group">
+                <label for="customer-name">Name</label>
+                <input type="text" id="customer-name" name="customer-name" class="form-control" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" aria-describedby="emailHelp" placeholder="123-456-7890">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-dark">Submit</button>
+        </form>
     </div>
     <footer th:replace="partials/navbar :: footer"></footer>
 </div>
