--- a/src/main/resources/templates/contact-us.html
+++ b/src/main/resources/templates/contact-us.html
@@ -9,11 +9,11 @@
         <form th:action="@{/contact-us}" method="post">
             <div class="form-group">
                 <label for="customer-name">Name</label>
-                <input type="text" id="customer-name" name="customer-name" class="form-control" aria-describedby="emailHelp">
+                <input type="text" id="customer-name" name="customer-name" class="form-control" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" class="form-control">
+                <input type="email" id="email" name="email" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="phone">Phone Number</label>
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+                <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
             </div>
             <button type="submit" class="btn btn-dark">Submit</button>
         </form>
