--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="partials/navbar :: head ('Home Page')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-<h1 class="page-title">Home</h1>
+<h1 class="page-title">JD Firearms</h1>
 <div class="page-container">
     <div class="container mb-3">
         <div class="carousel-wrap">
