--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -47,7 +47,7 @@
     </div>
 </nav>
 
-<footer th:fragment="footer" class="text-light bg-dark">
+<footer th:fragment="footer" class="text-muted bg-dark">
     <h3 id="support-header">Support</h3>
     <div class="contact larger-text">
         <div id="phone-num" class="margin-bottom">(361)463-1986</div>
