--- a/src/main/resources/templates/thanks-for-msg.html
+++ b/src/main/resources/templates/thanks-for-msg.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/navbar :: head ('Thank You')"></head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
 
+<div th:replace="partials/navbar :: scripts"></div>
 </body>
 </html>
